Fixed break points on smaller screens

--- a/bar/css/bar-bootstrap.css
+++ b/bar/css/bar-bootstrap.css
@@ -6,7 +6,7 @@
 	}
 	#ucfhb-inner { padding-right: 40px; }
 }
-@media (max-width: 480px) {
+@media (max-width: 640px) {
 	#ucfhb {
 		height: 150px !important;
 		margin-top: -100px;
